--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social:
   email: uzcategui@gmail.com
   linkedin: leonuz
 
-google_analytics: "G-X9PRXMNS15"
+google_analytics: "G-GZF5772MKH"
 
 disqus:
     shortname: https-leonuz-github-io
