--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: (leonuz💀)-[/var/log]
 description: Cybersecurity stuff and more..
 
-url: http://leonuz.guthub.io
+url: http://leonuz.github.io
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
